# ProjectSnake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/game/: CommandCentre.h  Direction.h  Event.h  GameContext.h
include/game/command/: CheckConstraintsGameCommand.h  CheckSnakeFoodCollisionGameCommand.h  ExtendActorGameCommand.h  GameCommand.h  MakeTurnGameCommand.h  SpawnFoodGameCommand.h  UpdateFoodTransformGameCommand.h  UpdateSnakeTransformGameCommand.h
include/game/model/: FoodModel.h  SnakeModel.h
include/game/view/: FoodView.h  FoodViewMediator.h  SnakeView.h  SnakeViewMediator.h
resources/: shaders.json
resources/shaders/: spriteFS.glsl  spriteVS.glsl
resources/shaders/effects/: postProcessingFS.glsl  postProcessingVS.glsl
src/: main.cpp
src/game/: CommandCenter.cpp  GameContext.cpp
src/game/command/: CheckConstraintsGameCommand.cpp  CheckSnakeFoodCollisionGameCommand.cpp  ExtendActorGameCommand.cpp  MakeTurnGameCommand.cpp  SpawnFoodGameCommand.cpp  UpdateFoodTransformGameCommand.cpp  UpdateSnakeTransformGameCommand.cpp
src/game/model/: FoodModel.cpp  SnakeModel.cpp
src/game/view/: FoodView.cpp  FoodViewMediator.cpp  SnakeView.cpp  SnakeViewMediator.cpp
